# test

./: CMakeLists.txt  prj.conf  sram1.ld
boards/: nucleo_u5a5zj_q.overlay
src/: Kconfig.sample_usbd  disk_bounce.c  idma_buffer.c  main.c  sd_bounce.c
zephyr/drivers/disk/: sdmmc_stm32.c
zephyr/subsys/usb/device_next/class/: usbd_dfu.c  usbd_msc.c  usbd_msc_scsi.c  usbd_uvc.c
